<resources>
    <string name="app_name">QQdemo</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="new_user">新用户</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="user_name_error">用户名不合法，必须长度3-20，首字符英文字符</string>
    <string name="password_error">密码不合法，必须3-20位的数字</string>
    <string name="confirm_password_error">密码不一致</string>
    <string name="register_progress">正在注册...</string>
    <string name="logining">正在登录...</string>
    <string name="logout">退(%s)出</string>
    <string name="dynamic">动态</string>
    <string name="contacts">联系人</string>
    <string name="load_contacts_success">加载成功</string>
    <string name="load_contacts_failed">加载失败！</string>
    <string name="friend_not_found">未搜索到好友</string>
    <string name="add">添加</string>
    <string name="send">发送</string>
    <string name="contact">与%s聊天</string>
</resources>
