<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/login_bk"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
    >
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@mipmap/avatar1"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        />
    <EditText
        android:id="@id/user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/user_name"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:imeOptions="actionNext"/>
    <EditText
        android:id="@id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:inputType="numberPassword"
        android:imeOptions="actionNext"/>
    <EditText
        android:id="@id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/confirm_password"
        android:layout_marginTop="10dp"
        android:inputType="numberPassword"
        android:imeOptions="actionDone"/>
    <Button
        android:id="@id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_login_selector"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        />


</LinearLayout>
